Think more about this...

--- a/compiler-core/Cargo.toml
+++ b/compiler-core/Cargo.toml
@@ -84,7 +84,7 @@ pathdiff = { version = "0.2.1", features = ["camino"] }
 # Memory arena using ids rather than references
 id-arena = "2.1"
 # Parse wat to wasm
-wat = "1.200.0"
+wat = "1.201.0"
 
 [build-dependencies]
 # Data (de)serialisation
@@ -99,3 +99,6 @@ pretty_assertions = "1.0.0"
 insta = "1.8.0"
 # Random value generation
 rand = "0.8.5"
+# wasm runtime for testing generated wasm
+#wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", features = ["gc"] } #Next version will have GC but not yet in 18 (not finished on main). Required a higher version of wat crate
+#headless_chrome = {version = "1.0.9", features = ["fetch"]}
