--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,6 @@
     "Untar",
     "walkdir"
   ],
-  "cSpell.language": "en,uk,en-GB,en-US"
+  "cSpell.language": "en,uk,en-GB,en-US",
+  "makefile.configureOnOpen": false
 }
